--- a/tournament/static/tournament/main.css
+++ b/tournament/static/tournament/main.css
@@ -1,4 +1,7 @@
 /* NavBar */
+.navbar {
+  margin-bottom: 0;
+}
 .navbar-nav p {
   margin-bottom: 0;
 }
@@ -31,6 +34,11 @@
 
 /*---*/
 /*Tournaments table*/
+div.btn-create{
+  width:40%;
+  margin:auto;
+}
+
 .btn-create {
   padding: 2px 10px;
   margin-bottom: 20px;
@@ -102,4 +110,13 @@ div .players-list {
   box-shadow: 0 0 4px 0px black;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+/*---*/
+
+.runner {
+  position: absolute;
+}
+.main-content {
+  margin-top:5px;
+  position: relative;
 }
