--- a/tournament/templates/tournament/players.html
+++ b/tournament/templates/tournament/players.html
@@ -6,11 +6,14 @@
   <div class="container-fluid ">
     <div class="row">
       {% for player in players %}
-      <div class="col-md-12">
-        <div class="players-list">
-          {{ forloop.counter }}. {{ player.first_name }} {{ player.last_name }}
+        <div class="col-md-10">
+          <div class="col-md-8">
+            {{ forloop.counter }}. {{ player.first_name }} {{ player.last_name }}
+          </div>
+          <div class="col-md-4">
+            Rank:{{ player.rank }}
+          </div>
         </div>
-      </div>
       {% endfor %}
     </div>
   </div>
